--- a/src/assets/scss/components/_post-card.scss
+++ b/src/assets/scss/components/_post-card.scss
@@ -1,22 +1,24 @@
-.card: {
-    max-width: 300px;
+
+
+.card{
+  color: black;
 }
-.media: {
+.media{
   height: 0px;
   padding-top: '56.25%'; // 16:9
 }
-.actions: {
+.actions{
   display: 'flex';
 }
-.expand: {
+.expand{
   transform: 'rotate(0deg)';
   transition: transform .5s;
 
   margin-left: 'auto';
 }
-.expandOpen: {
+.expandOpen{
   transform: 'rotate(180deg)';
 }
-.avatar: {
+.avatar{
   background-color: red;
 }
