--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -39,6 +39,8 @@
 	@import 'components/list';
 	@import 'components/table';
 	@import 'components/button';
+	@import 'components/blog-top-menu-bar';
+	@import 'components/post-card';
 
 // Layout.
 
