--- a/src/assets/scss/components/_image.scss
+++ b/src/assets/scss/components/_image.scss
@@ -3,6 +3,20 @@
 /// html5up.net | @ajlkn
 /// Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 ///
+@media(max-width:600px){
+	p > img[src^="/uploads"]{
+
+		width: 300px;
+	  margin-left: auto;
+		margin-right: auto;
+
+	}
+}
+p > img[src^="/uploads"]{
+	max-width: 1100px;
+
+
+}
 
 /* Image */
 
