--- a/src/assets/scss/components/_blog-top-menu-bar.scss
+++ b/src/assets/scss/components/_blog-top-menu-bar.scss
@@ -1,5 +1,16 @@
-.root{flex-grow: 1;}
-.menuButton{margin-left: -12px; margin-right: 20px;}
-.flex{flex-grow: 1;}
-.flex-right{flex: 1;}
-.list{width: 250px;}
+.root{
+  flex-grow: 1;
+}
+.menuButton{
+  margin-left: -12px;
+  margin-right: 20px;
+}
+.flex{
+  flex-grow: 1;
+}
+.flex-right{
+  flex: 1;
+}
+.list{
+  width: 250px;
+}
